tests/errors/InputError/ie02.ledger

2016-12-14  missing accounts

